@@ -2,6 +2,7 @@ v1.5 - Pending
 	+ Replace artist view for library with genre view
 	+ Display covers for albums in artist/genre views
 	+ Retain selection in lists after removing items
+	+ Hidden config option to expand notebook tabs (tabs_expanded)
 
 v1.4.2 - February 9, 2008
 	+ Add %D for disc tag in display formatting options
